--- a/Portfolio/Portfolio.csproj
+++ b/Portfolio/Portfolio.csproj
@@ -65,8 +65,10 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\AboutController.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\ProjectsController.cs" />
+    <Compile Include="Controllers\ResumeController.cs" />
     <Compile Include="Controllers\WorkController.cs" />
     <Compile Include="Data\MongoRepository.cs" />
     <Compile Include="Global.asax.cs">
@@ -140,6 +142,7 @@
     <Content Include="img\work\gridiq-thumb.png" />
     <Content Include="img\work\ra-thumb.png" />
     <Content Include="img\work\wedding-thumb.png" />
+    <Content Include="Scripts\bootstrap-modal.js" />
     <Content Include="Scripts\jquery-1.5.1-vsdoc.js" />
     <Content Include="Scripts\jquery-1.5.1.js" />
     <Content Include="Scripts\jquery-1.5.1.min.js" />
@@ -184,6 +187,8 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\About\" />
+    <Folder Include="Views\Resume\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
@@ -221,6 +226,8 @@
     <Content Include="Views\Projects\Edit.cshtml" />
     <Content Include="Views\Projects\Index.cshtml" />
     <Content Include="Views\Projects\_CreateOrEdit.cshtml" />
+    <Content Include="Views\Shared\_ContactForm.cshtml" />
+    <Content Include="Views\Work\Project.cshtml" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
