--- a/Portfolio/Portfolio.csproj
+++ b/Portfolio/Portfolio.csproj
@@ -187,7 +187,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Views\About\" />
     <Folder Include="Views\Resume\" />
   </ItemGroup>
   <ItemGroup>
@@ -228,6 +227,8 @@
     <Content Include="Views\Projects\_CreateOrEdit.cshtml" />
     <Content Include="Views\Shared\_ContactForm.cshtml" />
     <Content Include="Views\Work\Project.cshtml" />
+    <Content Include="Views\Shared\_ProjectNav.cshtml" />
+    <Content Include="Views\About\Index.cshtml" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
