Change error settings in web.config to detect AppHarbor errors

--- a/Portfolio/Web.config
+++ b/Portfolio/Web.config
@@ -13,7 +13,7 @@
          providerName="System.Data.SqlClient"
          connectionString="Server=.\SQLEXPRESS;Database=Portfolio;User ID=portfolio_user;Password=!44nqmB8rs5dqRU" />
     <add name="_conn" 
-         connectionString="mongodb://127.0.0.1:27017/portfolio?strict=true"/>
+         connectionString="mongodb://dbAdmin:dnP2FMvEc^RNNXC@staff.mongohq.com:10031/portfolio?strict=true"/>
   </connectionStrings>
 
   <appSettings>
@@ -72,6 +72,8 @@
         <add namespace="System.Web.WebPages"/>
       </namespaces>
     </pages>
+
+    <customErrors mode="Off"/>
   </system.web>
 
   <system.webServer>
