--- a/Portfolio/Portfolio.csproj
+++ b/Portfolio/Portfolio.csproj
@@ -143,6 +143,7 @@
     <Content Include="img\work\ra-thumb.png" />
     <Content Include="img\work\wedding-thumb.png" />
     <Content Include="Scripts\bootstrap-modal.js" />
+    <Content Include="Scripts\gallery.js" />
     <Content Include="Scripts\jquery-1.5.1-vsdoc.js" />
     <Content Include="Scripts\jquery-1.5.1.js" />
     <Content Include="Scripts\jquery-1.5.1.min.js" />
