--- a/Portfolio/Portfolio.csproj
+++ b/Portfolio/Portfolio.csproj
@@ -111,9 +111,19 @@
     <Content Include="Content\themes\base\jquery.ui.theme.css" />
     <Content Include="Content\type\titillium.css" />
     <Content Include="Global.asax" />
+    <Content Include="img\elements\back-arrow.png" />
+    <Content Include="img\elements\back-key-disabled.png" />
+    <Content Include="img\elements\back-key-down.png" />
+    <Content Include="img\elements\back-key.png" />
     <Content Include="img\elements\bg.png" />
     <Content Include="img\elements\horizontal-dash.png" />
+    <Content Include="img\elements\next-arrow.png" />
+    <Content Include="img\elements\next-key-disabled.png" />
+    <Content Include="img\elements\next-key-down.png" />
+    <Content Include="img\elements\next-key.png" />
     <Content Include="img\elements\poindexter.png" />
+    <Content Include="img\elements\thumb-active.png" />
+    <Content Include="img\elements\thumb-inactive.png" />
     <Content Include="img\elements\vertical-dash.png" />
     <Content Include="img\gridiq-admin-dashboard.png" />
     <Content Include="img\gridiq-admin-pending.png" />
@@ -194,30 +204,30 @@
     <Content Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Content\type\TitilliumText22L001-webfont.eot" />
-    <None Include="Content\type\TitilliumText22L001-webfont.svg" />
-    <None Include="Content\type\TitilliumText22L001-webfont.ttf" />
-    <None Include="Content\type\TitilliumText22L001-webfont.woff" />
-    <None Include="Content\type\TitilliumText22L002-webfont.eot" />
-    <None Include="Content\type\TitilliumText22L002-webfont.svg" />
-    <None Include="Content\type\TitilliumText22L002-webfont.ttf" />
-    <None Include="Content\type\TitilliumText22L002-webfont.woff" />
-    <None Include="Content\type\TitilliumText22L003-webfont.eot" />
-    <None Include="Content\type\TitilliumText22L003-webfont.svg" />
-    <None Include="Content\type\TitilliumText22L003-webfont.ttf" />
-    <None Include="Content\type\TitilliumText22L003-webfont.woff" />
-    <None Include="Content\type\TitilliumText22L004-webfont.eot" />
-    <None Include="Content\type\TitilliumText22L004-webfont.svg" />
-    <None Include="Content\type\TitilliumText22L004-webfont.ttf" />
-    <None Include="Content\type\TitilliumText22L004-webfont.woff" />
-    <None Include="Content\type\TitilliumText22L005-webfont.eot" />
-    <None Include="Content\type\TitilliumText22L005-webfont.svg" />
-    <None Include="Content\type\TitilliumText22L005-webfont.ttf" />
-    <None Include="Content\type\TitilliumText22L005-webfont.woff" />
-    <None Include="Content\type\TitilliumText22L006-webfont.eot" />
-    <None Include="Content\type\TitilliumText22L006-webfont.svg" />
-    <None Include="Content\type\TitilliumText22L006-webfont.ttf" />
-    <None Include="Content\type\TitilliumText22L006-webfont.woff" />
+    <Content Include="Content\type\TitilliumText22L001-webfont.eot" />
+    <Content Include="Content\type\TitilliumText22L001-webfont.svg" />
+    <Content Include="Content\type\TitilliumText22L001-webfont.ttf" />
+    <Content Include="Content\type\TitilliumText22L001-webfont.woff" />
+    <Content Include="Content\type\TitilliumText22L002-webfont.eot" />
+    <Content Include="Content\type\TitilliumText22L002-webfont.svg" />
+    <Content Include="Content\type\TitilliumText22L002-webfont.ttf" />
+    <Content Include="Content\type\TitilliumText22L002-webfont.woff" />
+    <Content Include="Content\type\TitilliumText22L003-webfont.eot" />
+    <Content Include="Content\type\TitilliumText22L003-webfont.svg" />
+    <Content Include="Content\type\TitilliumText22L003-webfont.ttf" />
+    <Content Include="Content\type\TitilliumText22L003-webfont.woff" />
+    <Content Include="Content\type\TitilliumText22L004-webfont.eot" />
+    <Content Include="Content\type\TitilliumText22L004-webfont.svg" />
+    <Content Include="Content\type\TitilliumText22L004-webfont.ttf" />
+    <Content Include="Content\type\TitilliumText22L004-webfont.woff" />
+    <Content Include="Content\type\TitilliumText22L005-webfont.eot" />
+    <Content Include="Content\type\TitilliumText22L005-webfont.svg" />
+    <Content Include="Content\type\TitilliumText22L005-webfont.ttf" />
+    <Content Include="Content\type\TitilliumText22L005-webfont.woff" />
+    <Content Include="Content\type\TitilliumText22L006-webfont.eot" />
+    <Content Include="Content\type\TitilliumText22L006-webfont.svg" />
+    <Content Include="Content\type\TitilliumText22L006-webfont.ttf" />
+    <Content Include="Content\type\TitilliumText22L006-webfont.woff" />
     <Content Include="Views\Shared\EditorTemplates\Image.cshtml" />
     <Content Include="Views\Shared\_Nav.cshtml" />
     <Content Include="Views\Projects\Create.cshtml" />
