--- a/Portfolio/packages.config
+++ b/Portfolio/packages.config
@@ -7,6 +7,8 @@
   <package id="jQuery.Validation" version="1.8.0" />
   <package id="jQuery.vsdoc" version="1.5.1" />
   <package id="knockoutjs" version="2.0.0" />
+  <package id="LowercaseRoutesMVC" version="1.0.3" />
+  <package id="MarkdownSharp" version="1.13.0.0" />
   <package id="Modernizr" version="1.7" />
   <package id="MvcScaffolding" version="1.0.6" />
   <package id="NoRM" version="0.9.8" />
