Include image files not linked to VS solution

--- a/Portfolio/Portfolio.csproj
+++ b/Portfolio/Portfolio.csproj
@@ -126,6 +126,7 @@
     <Content Include="img\elements\back-key.png" />
     <Content Include="img\elements\bg.png" />
     <Content Include="img\elements\horizontal-dash.png" />
+    <Content Include="img\elements\long-arrow.png" />
     <Content Include="img\elements\next-arrow.png" />
     <Content Include="img\elements\next-key-disabled.png" />
     <Content Include="img\elements\next-key-down.png" />
