--- a/Portfolio/Portfolio.csproj
+++ b/Portfolio/Portfolio.csproj
@@ -89,6 +89,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\bootstrap\bootstrap.css" />
     <Content Include="Content\grid.css" />
     <Content Include="Content\main.css" />
     <Content Include="Content\themes\base\images\ui-bg_flat_0_aaaaaa_40x100.png" />
@@ -134,6 +135,7 @@
     <Content Include="img\elements\poindexter.png" />
     <Content Include="img\elements\thumb-active.png" />
     <Content Include="img\elements\thumb-inactive.png" />
+    <Content Include="img\elements\up-arrow.png" />
     <Content Include="img\elements\vertical-dash.png" />
     <Content Include="img\gridiq-admin-dashboard.png" />
     <Content Include="img\gridiq-admin-pending.png" />
@@ -265,6 +267,7 @@
     <None Include="Content\bootstrap\variables.less" />
     <Content Include="Views\Shared\_Footer.cshtml" />
     <Content Include="Views\Resume\Index.cshtml" />
+    <Content Include="Content\files\dpoindexter-resume.pdf" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
